samples/_failures_safe/1761203992_78cfd7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_beac0047.c: In function ‘main’:
./samples/SAFE/__tmp_beac0047.c:173: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_beac0047.c:172:9: error: expected declaration or statement at end of input
  172 |         if
      |         ^~
./samples/SAFE/__tmp_beac0047.c:172:9: error: expected declaration or statement at end of input
